fixed table white-space wrap

--- a/_static/css/style.css
+++ b/_static/css/style.css
@@ -148,6 +148,10 @@ td p {
 	white-space: normal;
 }
 
+.wy-table-responsive table td, .wy-table-responsive table th {
+	white-space: normal;
+}
+
 h1,
 h2,
 h3,
